kotlin-parser/src/test/semlang/validatorTests/fail/booleanLiteral2.sem
function myStuff.myFunction(): Boolean {
  Boolean."FALSE"
}
